Now using a fixed width for the exception dialog internal containers: for the exception message and the stack trace. An horizontal scrollbar will appear if the exception message is too large. If it has many lines, the dialog box height will grow. Also fixed a bug related to the Show/Hide stacktrace in Mozilla.

--- a/viewer/org.eclipse.birt.report.viewer/birt/webcontent/birt/styles/style.css
+++ b/viewer/org.eclipse.birt.report.viewer/birt/webcontent/birt/styles/style.css
@@ -82,11 +82,15 @@
 	text-decoration: underline;
 }
 
+.birtviewer_exception_dialog_message
+{	
+	padding: 2px;
+}
+
 .birtviewer_exception_dialog_detail
 {
 	padding:2px;
-	width:100%;
-	overflow:auto;
+	overflow:auto; 
 	height:150px;
 	border-top-color:#cccccc;
 	border-top-style:solid;
